# robo-ragmond

./: .gitignore  README.md  credentials.json  extraction_examples.py  pyproject-streamlit.toml  pyproject.toml  rays_chat_app.py  rays_chatbot_test.py  rays_rag.py  requirements.txt  setup.py
.cursor/rules/: rag.mdc
.devcontainer/: devcontainer.json
content/: rays_content_raw.md
crawl/: script_testing.py  test_cleaning.py  token.pickle
crawl/chroma_db/: chroma.sqlite3
crawl/content/: rays_content_raw.md
rays_aggregate_temp/: temp_Rays Combined Website Content_aggregated.md
rays_az_guide_temp/: temp_full_az_guide_content.md
rays_content/: rays_www_mlb_com_rays_fans_rays-gaming_20250424_130702.md  rays_www_mlb_com_rays_tickets_specials_salute-to-servic_20250424_125333.md  rays_www_mlb_com_rays_tickets_specials_salute_20250423_172234.md
rays_content_temp/: temp_aggregated_content.md
src/crawl/: crawled_content.md  crawler.py
src/rag/: __init__.py  main.py
src/rag/config/: __init__.py  settings.py
src/rag/crawl/: __init__.py  crawler.py
src/rag/processing/: __init__.py  chunker.py  cleaner.py
src/rag/storage/: __init__.py  vectorstore.py
src/rag/tests/: test_crawl.py  test_vectorstore.py
src/rag/utils/: __init__.py  markdown_utils.py
test_chroma_db/: chroma.sqlite3
~/: .zshrc
