[project]
name = "robo-ragmond"
version = "0.1.0"
description = "A RAG-based customer support chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-community>=0.0.1",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "crawl4ai>=0.1.0",
    "tqdm>=4.65.0",
    "streamlit>=1.32.0",
    "anthropic>=0.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robo_ragmond"]
