[project]
name = "robo-ragmond"
version = "0.1.0"
description = "A RAG-based customer support chatbot for Tampa Bay Rays"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jarred Robidoux & Yuki Taketani"}
]
dependencies = [
    # Core dependencies
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "crawl4ai>=0.1.0",
    "tqdm>=4.65.0",
    
    # Web crawling
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    
    # Text processing
    "beautifulsoup4>=4.9.3",
    "markdown>=3.3.4",
    
    # Hugging Face integration
    "huggingface-hub>=0.19.0",
    "transformers>=4.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robo_ragmond"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
